--- a/Front-End/styles/style.css
+++ b/Front-End/styles/style.css
@@ -1,19 +1,59 @@
+body {
+  font-size: medium;
+  background-color: black;
+}
+
+img {
+  display: block;
+  margin: auto;
+  height: 200px;
+  width: 200px;
+}
+
+.altoderow {
+  height: 400px;
+}
+
 .main-header {
   background: url(../images/backgroun0.jpg);
   background-size: cover;
   min-height: auto;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-left: 30px;
+  margin-right: 30px;
+  padding-top: 10px;
+  padding-left: 30px;
+  padding-bottom: 10px;
+  padding-right: 10px;
+  border-radius: 50px;
 }
 
 .background-overlay {
   background-color: rgba(19, 15, 64, 0.7);
+  margin-left: -30px;
+  margin-top: -10px;
+  margin-bottom: -10px;
+  margin-right: -10px;
+  padding-left: 0px;
+  border-radius: 50px;
   background-size: cover;
-  min-height: auto;
+  min-height: cover;
 }
 
-.about-me-header {
-  padding-top: 5px;
+.containerstyle {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-left: 30px;
+  margin-right: 30px;
+  padding-top: 10px;
+  padding-left: 30px;
+  padding-bottom: 10px;
+  padding-right: 10px;
   background-color: rgba(19, 15, 64, 0.7);
+  border-radius: 50px;
 }
+
 
 .experience-header {
   padding-top: 5px;
