--- a/Front-End/styles/style.css
+++ b/Front-End/styles/style.css
@@ -1,19 +1,85 @@
+nav {
+  margin-top: 0px;
+  margin-bottom: 5px;
+  margin-left: 30px;
+  margin-right: 30px;
+  padding-top: 10px;
+  padding-left: 30px;
+  padding-bottom: 10px;
+  padding-right: 10px;
+  border-bottom-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+}
+
+footer {
+  color: white;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-left: 30px;
+  margin-right: 30px;
+  padding-top: 10px;
+  padding-left: 30px;
+  padding-bottom: 10px;
+  padding-right: 10px;
+  border-radius: 20px;
+}
+
+body {
+  font-size: medium;
+  background-color: black;
+}
+
+img {
+  display: block;
+  margin: auto;
+  height: 200px;
+  width: 200px;
+}
+
+.altoderow {
+  height: 400px;
+}
+
 .main-header {
   background: url(../images/backgroun0.jpg);
   background-size: cover;
   min-height: auto;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-left: 30px;
+  margin-right: 30px;
+  padding-top: 10px;
+  padding-left: 30px;
+  padding-bottom: 10px;
+  padding-right: 10px;
+  border-radius: 50px;
 }
 
 .background-overlay {
   background-color: rgba(19, 15, 64, 0.7);
+  margin-left: -30px;
+  margin-top: -10px;
+  margin-bottom: -10px;
+  margin-right: -10px;
+  padding-left: 0px;
+  border-radius: 50px;
   background-size: cover;
-  min-height: auto;
+  min-height: cover;
 }
 
-.about-me-header {
-  padding-top: 5px;
+.containerstyle {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-left: 30px;
+  margin-right: 30px;
+  padding-top: 10px;
+  padding-left: 30px;
+  padding-bottom: 10px;
+  padding-right: 10px;
   background-color: rgba(19, 15, 64, 0.7);
+  border-radius: 50px;
 }
+
 
 .experience-header {
   padding-top: 5px;
@@ -41,7 +107,6 @@ footer {
     font-family: 'Open Sans', sans-serif;
     text-align: center;
   }
-
   header {
     color:rgb(236, 10, 10)
   }
@@ -53,14 +118,12 @@ footer {
     padding: 0 20px 20px 20px;
     border: 15px solid rgb(53, 11, 150);
   }
-
   .Lead-content, .Section-Title {
     margin: 0;
     padding: 20px 0;
     color: #00539F;
     text-shadow: 3px 3px 1px black;
   }
-
   .Personal-Section {
       width: 700px;
       height: 300px;
@@ -68,7 +131,6 @@ footer {
       padding: 5px;
       border: 5px solid black;
     }
-
   .Lead-content {
     background-color: white;
     margin: 0px;
